RESOLVED FIXED24914
empty-string assertion crash when running storage tests
https://bugs.webkit.org/show_bug.cgi?id=24914
Summary empty-string assertion crash when running storage tests
Darin Adler
Reported 2009-03-28 12:42:22 PDT
I have the fix for the assertion we're seeing in the storage tests.
Attachments
patch (2.83 KB, patch)
2009-03-28 12:47 PDT, Darin Adler
mrowe: review+
Darin Adler
Comment 1 2009-03-28 12:47:31 PDT
Darin Adler
Comment 2 2009-03-28 17:16:41 PDT
Note You need to log in before you can comment on or make changes to this bug.