2009-03-28  Darin Adler  <darin@apple.com>

Reviewed by Mark Rowe.

        Bug 24914: empty-string assertion crash when running storage tests
        https://bugs.webkit.org/show_bug.cgi?id=24914

        * storage/Database.cpp:
        (WebCore::Database::performOpenAndVerify): Don't store empty version strings
        in the map, since empty strings are per-thread.



Canonical link: https://commits.webkit.org/34132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42076 268f45cc-cd09-0410-ab3c-d52691b4dbfc